objects/RameshRabit__c.object
<CustomObject>
    <description>In Autorabit Testing purpose created new checjk.</description>
    <fields>
        <fullName>TestField2__c</fullName>
        <description>test</description>
        <label>TestField2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Testfield1__c</fullName>
        <description>Testing in March 7</description>
        <label>Testfield1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>marchField__c</fullName>
        <description>New Test to display in org</description>
        <label>marchField</label>
        <type>AutoNumber</type>
    </fields>
    <label>RameshRabit</label>
    <nameField>
        <label>RameshRabit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RameshRabits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>